project(Sajjad)
cmake_minimum_required (VERSION 2.8.11)
find_package(Threads)
add_executable(sender FileSender.cpp)
add_executable(receiver FileReceiver.cpp)
add_library(Compressor Compressor.cpp)
add_library(Encryptor Encryptor.cpp)
target_link_libraries(sender Compressor Encryptor)
target_link_libraries(receiver Compressor Encryptor ${CMAKE_THREAD_LIBS_INIT})
